--- a/app/assets/javascripts/main.js.coffee.erb
+++ b/app/assets/javascripts/main.js.coffee.erb
@@ -1,5 +1,7 @@
 @app = angular.module("Backbone", ["ngResource", "ngRoute"])
 
+# Ceci est un commentaire inutile
+
 @app.config(($routeProvider) ->
   $routeProvider
     .when('/invoices',
