Add button to export invoice list in CSV #11
TODO: add tests and

--- a/app/assets/templates/invoices/index.html.slim
+++ b/app/assets/templates/invoices/index.html.slim
@@ -1,6 +1,7 @@
 .head
   h1 Factures
   .actions
+    a.btn.btn-sm.btn-success href="/api/v1/invoices.csv" target="_blank" CSV
     a.btn.btn-primary.btn-lg id='new-invoice' href='' ng-click='navNewInvoice()' Nouvelle facture
 .row.header
   .col-lg-1.col-xs-2.date Date
