--- a/app/views/time_slices/index.html.slim
+++ b/app/views/time_slices/index.html.slim
@@ -1,4 +1,8 @@
-h1 Time Lapse
+.row
+  .col-lg-11
+    h1 Time Lapse
+  .col-lg-1
+    a.btn.btn-sm.btn-success id='csv-export-button' href="/api/v1/time_slices.csv" CSV
 
 div ng-controller="TimeSliceCtrl"
   table class="table table-striped table-hover" id="time-slices"
