Add message for TimeSlice insertion result #20

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,3 +20,15 @@
 li.error {
   color: red;
 }
+
+.alert {
+  transition: all 5s;
+  text-align: center;
+  font-size: 12px;
+  font-weight: bold;
+  display:none;
+}
+
+.vanish {
+  opacity: 0
+}
