--- a/app/views/time_slices/index.html.slim
+++ b/app/views/time_slices/index.html.slim
@@ -1,3 +1,5 @@
+div id='error-message' class="alert alert-danger"
+div id='success-message' class="alert alert-success"
 .row
   .col-lg-11
     h1 Time Lapse
