--- a/app/assets/stylesheets/invoices.css.scss
+++ b/app/assets/stylesheets/invoices.css.scss
@@ -59,6 +59,11 @@
   }
 }
 
+// remove red border when input field not valid, until we find a way to use it
+// without being active on firefox even before the user tries to submit
+:invalid {
+  box-shadow: none;
+}
 
 // hide action when not in large mode
 @media (max-width: 1200px) {
