Added pagination to time_slices

--- a/app/assets/javascripts/main.js.coffee.erb
+++ b/app/assets/javascripts/main.js.coffee.erb
@@ -1,4 +1,4 @@
-@app = angular.module("Backbone", ["ngResource", "ngRoute"])
+@app = angular.module("Backbone", ["ngResource", "ngRoute", "ui.bootstrap"])
 
 @app.config(($routeProvider) ->
   $routeProvider
