--- a/app/views/time_slices/index.html.slim
+++ b/app/views/time_slices/index.html.slim
@@ -3,8 +3,9 @@
     h1 Time Lapse
   .col-lg-1
     a.btn.btn-sm.btn-success id='csv-export-button' href="/api/v1/time_slices.csv" CSV
-
-div ng-controller="TimeSliceCtrl"
+div ng-controller="TimeSliceCtrl" 
+  pagination total-items="totalItems" ng-model="currentPage" items-per-page="pageSize" max-size="10" boundary-links="true" class="pagination-sm" num-pages="numPages" rotate="false"
+  pre Page {{currentPage}} / {{numPages}}, Total items: {{totalItems}}
   table class="table table-striped table-hover" id="time-slices"
     thead
       tr
@@ -31,7 +32,7 @@ div ng-controller="TimeSliceCtrl"
           td
             input id='new-time-slice-submit' type="submit" value="Add" class="btn btn-success btn-sm"
 
-      tr class="time-slice" ng-repeat="timeslice in timeslices" bb-item-edit=""
+      tr class="time-slice" ng-repeat="timeslice in timeslices | startFrom:(currentPage-1)*pageSize | limitTo:pageSize" bb-item-edit=""
         td
           .day.bb-show
             '{{timeslice.day}}
