--- a/app/views/time_slices/index.html.slim
+++ b/app/views/time_slices/index.html.slim
@@ -14,7 +14,7 @@ div ng-controller="TimeSliceCtrl"
         th Duration
         th Activity
         th Comment
-        th Billable
+        th Billing?
         th Action
     tbody
 
