--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -31,7 +31,7 @@ body
     - else
       = link_to 'Login', new_user_session_path
 
-    p class="alert"
+    p class="alert" id="info-message"
       = alert
     p class="notice"
       = notice
