--- a/app/views/time_slices/index.html.slim
+++ b/app/views/time_slices/index.html.slim
@@ -1,5 +1,3 @@
-div id='info-message' class="alert"
-
 .row
   .col-lg-11
     h1 Time Lapse
@@ -25,7 +23,7 @@ div ng-controller="TimeSliceCtrl"
           td
             select ng-model="newTimeSlice.project_id" ng-options="project.id as project.name for project in projects"
           td
-            input id='new-time-slice-duration' type="text" ng-model="newTimeSlice.duration" required="true"
+            input id='new-time-slice-duration' type="text" ng-model="newTimeSlice.duration"
           td
             select ng-model="newTimeSlice.activity_id" ng-options="activity.id as activity.label for activity in activities"
           td
