--- a/app/assets/templates/invoices/new.html.slim
+++ b/app/assets/templates/invoices/new.html.slim
@@ -105,7 +105,7 @@ form ng-submit="addTimeSlice()" class="form form-horizontal invoice" role="form"
     .form-group
       label class='col-sm-3 control-label' TVA(%):
       .col-sm-2
-          input.form-control id="invoice-vat-rate" type="number" step="0.1" min="0" max="100" ng-model="invoice.vat_rate"
+          input.form-control id="invoice-vat-rate" ng-model="invoice.vat_rate"
       .col-sm-7
         .form-control-static.invoice-vat ng-bind="calculate_vat() | euros"
     .form-group
