Add due date field to DB, API and front end #165

--- a/app/assets/templates/invoices/new.html.slim
+++ b/app/assets/templates/invoices/new.html.slim
@@ -23,6 +23,10 @@ form ng-submit="addTimeSlice()" class="form form-horizontal invoice" role="form"
         .col-sm-7
           select.form-control id='invoice-payment-term' ng-model="invoice.payment_term_id" ng-options="payment_term.id as payment_term.label for payment_term in payment_terms"
       .form-group
+        label for='invoice-due-date' class='col-sm-5 control-label' Date d'échéance
+        .col-sm-7
+          input.form-control id='invoice-due-date' type="text" ng-model="invoice.due_date"
+      .form-group
         label for='invoice-paid' class='col-sm-5 control-label' Payée
         .col-sm-7
           input id='invoice-paid' type="checkbox" ng-model="invoice.paid"
