--- a/app/assets/stylesheets/invoices.css.scss
+++ b/app/assets/stylesheets/invoices.css.scss
@@ -57,6 +57,9 @@
       margin-right: 10px;
     }
   }
+  .green {
+    background-color: #5CB85C;
+  }
 }
 
 // remove red border when input field not valid, until we find a way to use it
