Add colors to late invoices #165

--- a/app/assets/stylesheets/invoices.css.scss
+++ b/app/assets/stylesheets/invoices.css.scss
@@ -60,6 +60,12 @@
   .green {
     background-color: #5CB85C;
   }
+  .orange {
+    background-color: #FFA500;
+  }
+  .red {
+    background-color: #FF0000;
+  }
 }
 
 // remove red border when input field not valid, until we find a way to use it
