--- a/app/views/user_mailer/invoice_alert.html.slim
+++ b/app/views/user_mailer/invoice_alert.html.slim
@@ -1,3 +1,3 @@
 Hello!
-@invoice.customer.name n'a à priori pas payé sa facture...
+p= @invoice.customer.name n'a à priori pas payé sa facture...
 p= link_to "Facture en retard", invoice_url(@invoice.id)
