--- a/app/views/user_mailer/invoice_alert.html.slim
+++ b/app/views/user_mailer/invoice_alert.html.slim
@@ -1,3 +1,3 @@
-p= Bonjour!
+p= "Bonjour!"
 p= "#{@invoice.customer.name} did not pay his invoice..."
 p= link_to "Very late invoice", invoice_url(@invoice.id)
